--- a/invensys.auth/src/invensys.auth.server/appsettings.Development.json
+++ b/invensys.auth/src/invensys.auth.server/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "AuthenticationServerConnection": "Server=.\\sqlexpress;Database=InvensysAuthDb;Integrated Security=SSPI;TrustServerCertificate=True;"
+    "AuthenticationServerConnection": "Server=.;Database=InvensysAuthDb;Integrated Security=SSPI;TrustServerCertificate=True;"
   }
 }
