--- a/invensys.auth/src/invensys.auth.server/invensys.auth.server.csproj
+++ b/invensys.auth/src/invensys.auth.server/invensys.auth.server.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\invensys.auth.infrastructure\invensys.auth.infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Endpoints\" />
+  </ItemGroup>
+
 </Project>
