--- a/src/invensys.auth.server/invensys.auth.server.csproj
+++ b/src/invensys.auth.server/invensys.auth.server.csproj
@@ -34,4 +34,8 @@
     <Folder Include="Endpoints\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
