--- a/src/invensys.auth.application/invensys.auth.application.csproj
+++ b/src/invensys.auth.application/invensys.auth.application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
     <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
   </ItemGroup>
@@ -18,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Endpoints\AuthClients\Commands\" />
+    <Folder Include="Endpoints\AuthUsers\Commands\" />
   </ItemGroup>
 
 </Project>
