--- a/src/invensys.auth.server/ClientApp/angular.json
+++ b/src/invensys.auth.server/ClientApp/angular.json
@@ -64,7 +64,7 @@
         },
         "serve": {
             "options": {
-                "ssl": true,
+                "ssl": false,
                 "sslCert": "./SSL/localhost.pem",
                 "sslKey": "./SSL/localhost-key.pem"
             },
