--- a/src/invensys.auth.server/appsettings.Development.json
+++ b/src/invensys.auth.server/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "AuthenticationServerConnection": "Server=.\\SQLEXPRESS;Database=InvensysAuthDb;Integrated Security=SSPI;TrustServerCertificate=True;"
+    //"AuthenticationServerConnection": "Server=mart.zadns.co.za;Database=InvensysAuthDb;User Id=invensys;password=Nostres$4;TrustServerCertificate=True;"
   }
 }
